fix: deprecate campaign parameter in /questions*
replace it with `campaigns` parameter, which can be used to fetch
insights that have all the campaigns.
